--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "i18next": "^23.11.4",
+        "i18next-browser-languagedetector": "^8.0.0",
+        "i18next-http-backend": "^2.5.2",
+        "react-i18next": "^14.1.1",
         "remixicon": "^4.2.0"
     }
 }
