--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "i18next-http-backend": "^2.5.2",
         "react-i18next": "^14.1.1",
         "remixicon": "^4.2.0",
-        "sweetalert2": "^11.11.0"
+        "sweetalert2": "^11.11.0",
+        "ziggy-js": "^2.2.1"
     }
 }
