--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "i18next-browser-languagedetector": "^8.0.0",
         "i18next-http-backend": "^2.5.2",
         "react-i18next": "^14.1.1",
+        "react-select": "^5.8.0",
         "remixicon": "^4.2.0",
         "sweetalert2": "^11.11.0",
         "ziggy-js": "^2.2.1"
