--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "inertiajs/inertia-laravel": "^1.0",
@@ -27,7 +30,10 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Tightenco\\Ziggy\\": "vendor/tightenco/ziggy/src"
-        }
+        },
+        "files": [
+            "app/Helpers/CommonHelpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
