--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@react-pdf/renderer": "^3.4.4",
         "i18next": "^23.11.4",
         "i18next-browser-languagedetector": "^8.0.0",
         "i18next-http-backend": "^2.5.2",
